k3s/plex-stack/tailscale-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: tailscale
  name: tailscale
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tailscale
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/plex-stack-nginx-plex: "true"
        io.kompose.service: tailscale
    spec:
      containers:
        - args:
            - sh
            - -c
            - |2
                tailscaled --tun=userspace-networking --state=mem: &
                sleep 3 &&
                tailscale up --authkey= &&
                sleep infinity
          image: tailscale/tailscale
          name: tailscale
          resources: {}
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          volumeMounts:
            - mountPath: /dev/net/tun
              name: tailscale-claim0
            - mountPath: /var/lib/tailscale
              name: tailscale-var-lib
      restartPolicy: Always
      volumes:
        - name: tailscale-claim0
          persistentVolumeClaim:
            claimName: tailscale-claim0
        - name: tailscale-var-lib
          persistentVolumeClaim:
            claimName: tailscale-var-lib
status: {}
