k3s/plex-stack/plex-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: test-dev
  labels:
    app: plex
spec:
  selector:
    io.kompose.service: plex
  ports:
    - name: http
      port: 32400
      targetPort: 32400
