k3s/plex-stack/plex-ingress.yaml
# plex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: plex.heroaero.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex     # must match `kubectl get svc`
                port:
                  number: 32400
